# hazing-service

./: Cargo.toml  README.md
.github/workflows/: rust-global.yaml
apps/web/: Cargo.toml  README.md  index.html
apps/web/src/: main.rs
apps/web/src/components/: editor.rs  metamask.rs  mod.rs
libs/metamask/: Cargo.toml
libs/metamask/src/: ethereum.rs  lib.rs  transaction.rs
services/hazing-backend/: Cargo.toml  config.yaml
services/hazing-backend/src/: main.rs
services/hazing-backend/src/cli/: mod.rs
services/hazing-backend/src/config/: mod.rs
services/hazing-backend/src/logger/: mod.rs
services/hazing-backend/src/service/: mod.rs
services/hazing-backend/src/service/data/: mod.rs
