[package]
name = "metamask"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
js-sys = "0.3.60"
thiserror = "1"
